{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 24,
  "lineage": "9591929f-b3af-c2a8-90e4-80ad1d12c6d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0904760c74251a246",
            "domain": "vpc",
            "id": "eipalloc-0904760c74251a246",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-72-17-246.compute-1.amazonaws.com",
            "public_ip": "52.72.17.246",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad0fc75a2c931041",
            "domain": "vpc",
            "id": "eipalloc-0ad0fc75a2c931041",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-129-169.compute-1.amazonaws.com",
            "public_ip": "3.215.129.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:internet-gateway/igw-03fb4ca7708f9d81e",
            "id": "igw-03fb4ca7708f9d81e",
            "owner_id": "823777578159",
            "tags": {
              "Environment": "test",
              "Name": "gwInternet",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "gwInternet",
              "Project": "Intuitcase"
            },
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0904760c74251a246",
            "connectivity_type": "public",
            "id": "nat-02c8596d4dc63a349",
            "network_interface_id": "eni-0346c865ca0a0e326",
            "private_ip": "10.0.0.118",
            "public_ip": "52.72.17.246",
            "subnet_id": "subnet-0ee2225f08789e5f2",
            "tags": {
              "Environment": "test",
              "Name": "gwNAT",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "gwNAT",
              "Project": "Intuitcase"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad0fc75a2c931041",
            "connectivity_type": "public",
            "id": "nat-08b2c8c7370054c66",
            "network_interface_id": "eni-0e40efdde4d4c7bae",
            "private_ip": "10.0.2.60",
            "public_ip": "3.215.129.169",
            "subnet_id": "subnet-0d72269bd8a7b587c",
            "tags": {
              "Environment": "test",
              "Name": "gwNAT",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "gwNAT",
              "Project": "Intuitcase"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09cd1ca07871018bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02c8596d4dc63a349",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09cd1ca07871018bf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f35a67b985365ab61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08b2c8c7370054c66",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f35a67b985365ab6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03fb4ca7708f9d81e",
            "id": "r-rtb-09d85ac2636f6491b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d85ac2636f6491b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:route-table/rtb-09cd1ca07871018bf",
            "id": "rtb-09cd1ca07871018bf",
            "owner_id": "823777578159",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "PrivateRouteTable",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PrivateRouteTable",
              "Project": "Intuitcase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:route-table/rtb-0f35a67b985365ab6",
            "id": "rtb-0f35a67b985365ab6",
            "owner_id": "823777578159",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "PrivateRouteTable",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PrivateRouteTable",
              "Project": "Intuitcase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:route-table/rtb-09d85ac2636f6491b",
            "id": "rtb-09d85ac2636f6491b",
            "owner_id": "823777578159",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "PublicRouteTable",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PublicRouteTable",
              "Project": "Intuitcase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4eb606a64032f67",
            "route_table_id": "rtb-09cd1ca07871018bf",
            "subnet_id": "subnet-0f1f0cd587a6c0918"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2e95fe2667a639e",
            "route_table_id": "rtb-0f35a67b985365ab6",
            "subnet_id": "subnet-0f061eba6ca76809f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ac7f7e1ac7883cb",
            "route_table_id": "rtb-09d85ac2636f6491b",
            "subnet_id": "subnet-0ee2225f08789e5f2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a826dd8722c223c",
            "route_table_id": "rtb-09d85ac2636f6491b",
            "subnet_id": "subnet-0d72269bd8a7b587c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:security-group/sg-0a0daf341a2198f0e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a0daf341a2198f0e",
            "ingress": [],
            "name": "terraform-20211215042706852800000001",
            "name_prefix": "terraform-",
            "owner_id": "823777578159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "sgBastion",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sgBastion",
              "Project": "Intuitcase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:subnet/subnet-0f1f0cd587a6c0918",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f1f0cd587a6c0918",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823777578159",
            "tags": {
              "Environment": "test",
              "Name": "PrivateSubnet",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PrivateSubnet",
              "Project": "Intuitcase"
            },
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:subnet/subnet-0f061eba6ca76809f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f061eba6ca76809f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823777578159",
            "tags": {
              "Environment": "test",
              "Name": "PrivateSubnet",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PrivateSubnet",
              "Project": "Intuitcase"
            },
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:subnet/subnet-0ee2225f08789e5f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ee2225f08789e5f2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823777578159",
            "tags": {
              "Environment": "test",
              "Name": "PublicSubnet",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PublicSubnet",
              "Project": "Intuitcase"
            },
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:subnet/subnet-0d72269bd8a7b587c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d72269bd8a7b587c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823777578159",
            "tags": {
              "Environment": "test",
              "Name": "PublicSubnet",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "PublicSubnet",
              "Project": "Intuitcase"
            },
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:vpc/vpc-0f6dc23b68c673d07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c061e9498e46e73",
            "default_route_table_id": "rtb-073796c32110bd033",
            "default_security_group_id": "sg-08b0b73ef77139ea5",
            "dhcp_options_id": "dopt-0f318154adc966f2a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f6dc23b68c673d07",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-073796c32110bd033",
            "owner_id": "823777578159",
            "tags": {
              "Environment": "test",
              "Name": "Default",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "Default",
              "Project": "Intuitcase"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823777578159:vpc-endpoint/vpce-0b4ddcfe43a6e1861",
            "cidr_blocks": [
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19"
            ],
            "id": "vpce-0b4ddcfe43a6e1861",
            "owner_id": "823777578159",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09cd1ca07871018bf",
              "rtb-09d85ac2636f6491b",
              "rtb-0f35a67b985365ab6"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "endpointS3",
              "Project": "Intuitcase"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "endpointS3",
              "Project": "Intuitcase"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f6dc23b68c673d07"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    }
  ]
}